# opencv

./: .gitignore
samples/cpp/tutorial_code/core/: CMakeLists.txt
samples/cpp/tutorial_code/core/my_builds/: CMakeLists.txt
